Prevent file names from overflowing in library

--- a/app/stylesheets/builtin-pages/components/files-browser/files-tree-view.less
+++ b/app/stylesheets/builtin-pages/components/files-browser/files-tree-view.less
@@ -55,6 +55,7 @@
 
       .name {
         &:extend(.overflow-ellipsis);
+        max-width: 450px;
 
         &:hover {
           text-decoration: underline;
